Add base to config

--- a/site/src/pages/index.astro
+++ b/site/src/pages/index.astro
@@ -8,7 +8,7 @@ import Demo from "../components/Demo.svelte";
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>normalize-js-code demo</title>
 	</head>
 	<body>
 		<Demo client:only="svelte" />
